--- a/assets/RunBuddyStyle.css
+++ b/assets/RunBuddyStyle.css
@@ -1,4 +1,9 @@
 /* apply styles to <header> */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -14,6 +19,7 @@ header {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    display: inline;
   }
   
   header nav {
@@ -24,6 +30,12 @@ header {
   header nav ul li {
     display: inline;
   }
+
+  header nav ul li a {
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 22px;
+}
 
 body {
     /* more on this crazy alphanumerical value in a minute! */
