--- a/assets/RunBuddyStyle.css
+++ b/assets/RunBuddyStyle.css
@@ -1,10 +1,10 @@
-/* apply styles to <header> */
+/*Global settings*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
+/*Header and nav style*/
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -46,7 +46,6 @@ header {
   background-position: center;
   position: relative;
 }
-/* Hero Style End */
 
 .hero-form {
   border-style: solid;
@@ -81,7 +80,6 @@ header {
   padding: 10px 20px;
   font-size: 16px;
 }
-/* HERO STYLES END */
 
 .form-input {
   border: 1px solid #024e76;
@@ -92,6 +90,10 @@ header {
   width: 100%;
   margin-bottom: 15px;
 }
+
+/* HERO STYLES END */
+
+/**/
 
 .intro {
   text-align: center;
@@ -104,6 +106,7 @@ header {
   font-size: 20px;
   margin: 0 auto;
 }
+/**/
 
 .steps {
   text-align: center;
@@ -133,6 +136,7 @@ header {
 .steps span {
   font-size: 38px;
 }
+
 /*combined steps and intro h2 section styles*/
 .section-title {
   font-size: 55px;
@@ -151,14 +155,63 @@ header {
   border-color: #39a6b2;
 }
 
+/*Trainer section styles start*/
+/*Section setting*/
+.trainers {
+  text-align: center;
+}
 
+.trainer {
+  width: 900px;
+  margin: 0 auto 30px auto;
+  background: #024e76;
+  color: #fce138;
+  overflow: auto;
+}
+
+.trainer img {
+  width: 35%;
+  float: left;
+}
+
+.trainer-bio {
+  padding: 35px;
+  float: left;
+  width: 65%;
+}
+
+.trainer-bio h3 {
+  font-size: 32px;
+  margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+  line-height: 1.3;
+}
+
+/*this section could be used in the global settings since they are a utility class*/
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+/*Trainer section styles end*/
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
 
+/*Footer style*/
 footer {
     background: #fce138;
     width: 100%;
