--- a/assets/RunBuddyStyle.css
+++ b/assets/RunBuddyStyle.css
@@ -196,6 +196,10 @@ header {
   line-height: 1.3;
 }
 
+/*Reach out section style - The map and contact info section*/
+
+
+
 /*this section could be used in the global settings since they are a utility class*/
 .text-left {
   text-align: left;
