--- a/assets/RunBuddyStyle.css
+++ b/assets/RunBuddyStyle.css
@@ -4,38 +4,74 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
+
 /*Header and nav style*/
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
-  }
-  
-  header a {
-    text-decoration: none;
-    color: #fce138;
-  }
+}
 
-  header h1 {
+header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
     display: inline;
   }
+
+header a {
+    text-decoration: none;
+    color: #fce138;
+  }
   
-  header nav {
+header nav {
     float: right;
     margin: 7px 0;
   }
 
-  header nav ul li {
+header nav ul li {
     display: inline;
   }
 
-  header nav ul li a {
+header nav ul li a {
   margin: 0 30px;
   font-weight: lighter;
   font-size: 22px;
+}
+
+/*Footer style*/
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
+
+footer h2 {
+  display: inline;
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  float: right;
+  line-height: 1.5;
+  text-align: right;
+}
+
+footer a {
+  color: #024e76;
+}
+/*Footer style ends*/
+
+/*Found this line in 1.6 check in but do not know what is styling*/
+section {
+  padding: 60px;
 }
 
 /* Hero Style Start */
@@ -46,9 +82,10 @@ header {
   background-position: center;
   position: relative;
 }
+/*hero style end*/
 
 .hero-form {
-  border-style: solid;
+  border-style: solid #024e76;
   border-width: 3px;
   border-color: #024e76;
   background-color: #fce138;
@@ -69,6 +106,16 @@ header {
   margin: 5px 0 15px 0;
 }
 
+.form-input {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
 .hero-form label {
   margin: 0 5px;
 }
@@ -79,16 +126,6 @@ header {
   border: none;
   padding: 10px 20px;
   font-size: 16px;
-}
-
-.form-input {
-  border: 1px solid #024e76;
-  display: block;
-  padding: 7px 15px;
-  font-size: 16px;
-  color: #024e76;
-  width: 100%;
-  margin-bottom: 15px;
 }
 
 /* HERO STYLES END */
@@ -196,10 +233,6 @@ header {
   line-height: 1.3;
 }
 
-/*Reach out section style - The map and contact info section*/
-
-
-
 /*this section could be used in the global settings since they are a utility class*/
 .text-left {
   text-align: left;
@@ -208,33 +241,44 @@ header {
 .text-right {
   text-align: right;
 }
-/*Trainer section styles end*/
 
-body {
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-  }
+/*Reach out section style - The map and contact info section*/
 
-/*Footer style*/
-footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-  }
+.contact {
+  text-align: center;
+  background: #024e76;
+}
 
-footer h2 {
-    display: inline;
-    color: #024e76;
-    font-size: 30px;
-    margin: 0;
-  }
+.contact h2 {
+  color: #fce138;
+}
 
-footer div {
-    float: right;
-    line-height: 1.5;
-    text-align: right;
-  }
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
 
-footer a {
-    color: #024e76;
-  }
+.contact-info div {
+  width: 410;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
