--- a/assets/secondary-styles.css
+++ b/assets/secondary-styles.css
@@ -1,18 +1,3 @@
-/* homepage hero
-.hero {
-    margin: 20px;
-    font-size: 20px;
-    background-color: white;
-    color: blue;
-  }
-  
-  .hero-secondary {
-    background-color: black;
-    color: red;
-  }
-  
-End of page styles*/
-
 .hero {
     background-position: bottom;
     height: auto;
@@ -38,20 +23,20 @@ End of page styles*/
 
 .secondary-content h3 {
     font-size: 25px;
-    margin: 0 20px 0 20px;
+    margin: 20px 0;
 }
 
 .secondary-content p {
     font-size: 16px;
     line-height: 1.5;
-    margin: 0 20px 0 20px;
+    margin: 20px 0;
 }
 
 .secondary-content ul {
-    margin: 20px 15px 20px 15px;
+    margin: 15px 20px;
 }
 
 .secondary-content li {
     color: #39a6b2;
-    margin: 0 10px 0 10px;
+    margin: 10px 0;
 }
